# cryptography_explorations

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: benchmark.rs  hadamard_product.rs  toeplitz_multiplication.rs
proptest-regressions/: toeplitz.txt
src/: el_interpolation.rs  group.rs  interpolation.rs  kzg.rs  kzg_transcript.rs  lib.rs  main.rs  other.rs  pedersen.rs  toeplitz.rs
src/matrix_math/: circulant.rs  mod.rs  toeplitz.rs  util.rs
tests/: toeplitz_fast_mul.rs
