[package]
name = "cryptography_exploration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-poly = "0.4.0"

ark-poly-commit = "0.4.0"
rand = "0.8.5"
ark-ff = "0.4.2"
ark-test-curves = "0.4.2"

ark-serialize = "0.4.2"
blake3 = "1.5.0"
blake2 = "0.10.6"