[package]
name = "cryptography_exploration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-poly = "0.4.2"
rand = "0.8.5"
ark-ff = "0.4.2"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.3.4"
proptest = "1.4.0"
nalgebra = "0.32.3"

[[bench]]
name = "toeplitz_multiplication"
harness = false

[[bench]]
name = "hadamard_product"
harness = false